<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fault_injection_analyzer</name>
  <version>0.0.1</version>
  <description>a</description>
  <maintainer email="hiroki.ota@tier4.jp">Hiroki Ota</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <exec_depend>autoware_auto_system_msgs</exec_depend>
  <exec_depend>tier4_control_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
